# DiligentComputer

./: .gitmodules  CMakeLists.txt  Main.cpp  README.md
content/shaders/: Compute.hlsl  Graphics.hlsl
include/: Config.h.in  DiligentComputer.h
src/: DiligentComputer.cpp  Main.cpp
